@@ -3,7 +3,6 @@
  */
 package org.xins.common.manageable;
 
-import org.xins.common.MandatoryArgumentChecker;
 import org.xins.common.text.FastStringBuffer;
 
 /**
