@@ -10,10 +10,7 @@ import javax.servlet.ServletConfig;
 
 import org.xins.common.MandatoryArgumentChecker;
 import org.xins.common.collections.EnumerationIterator;
-import org.xins.common.collections.AbstractPropertyReader;
 import org.xins.common.collections.PropertyReader;
-
-import org.xins.logdoc.LogdocStringBuffer;
 
 /**
  * Implementation of a <code>PropertyReader</code> that returns the
