@@ -36,7 +36,6 @@
 import java.util.HashMap;
 import org.apache.log4j.Logger;
 import org.xins.logdoc.AbstractLog;
-import org.xins.logdoc.LogStatistics;
 
 /**
  * Central logging handler.
